# hw_memory_manager

./: CMakeLists.txt
include/: AllocatedWith.hpp  AllocatedWith.tpp  CstdlibAllocator.hpp  DefaultAllocator.hpp  IMemoryManager.hpp  MemoryManagerStrategy.hpp  MemoryManagerStrategy.tpp  MemoryManagerSwitcher.hpp  StackAllocator.hpp  StackAllocator.tpp  StackAllocatorWrapper.hpp
src/: CstdlibAllocator.cpp  DefaultAllocator.cpp  MemoryManagerSwitcher.cpp  StackAllocatorWrapper.cpp  memory_manager_speed_tests.cpp  memory_manager_unit_tests.cpp
